--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,10 +1,11 @@
 @media only screen and (max-width: 600px) {
   .landing-page {
     margin: 1rem;
+    margin-bottom: 1rem;
+    flex-direction: column;
   }
 
-  .landing-page {
-    display: flex;
-    flex-direction: column-reverse;
+  .landing-description {
+    margin-bottom: 1.5rem;
   }
 }
